--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "@tsconfig/node16/tsconfig.json",
-  "exclude": ["packages"]
+  "exclude": ["packages"],
+  "compilerOptions": {
+    "module": "ESNext",
+    "moduleResolution": "node"
+  }
 }
